--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,13 @@ html {
   padding: 10px;
 }
 
+section {
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  margin: 20px;
+  padding: 20px;
+}
+
 .hidden {
   display: none;
 }
