--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,7 @@ button {
 }
 
 section {
+  background-color: #14171f;
   border-radius: 5px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   margin: 20px;
