--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,16 +11,28 @@ body {
   width: 100%;
 }
 
-footer {
+header {
   display: flex;
   justify-content: space-between;
-  margin: 20px 0;
+  align-items: center;
+}
+
+header a {
+  font-size: 24px;
+  text-decoration: none;
+}
+
+footer {
+  color: rgba(255, 0, 191, 0.3);
+  display: flex;
+  justify-content: space-between;
+  margin: 60px 0 0 0;
   text-align: right;
 }
 
 button {
   background-color: #282f41;
-  border-color: rgba(0, 0, 0, 0.3);
+  border-color: rgba(231, 159, 159, 0.3);
   color: whitesmoke;
   font-size: 20px;
   padding: 10px;
