--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,15 +11,25 @@ body {
   width: 100%;
 }
 
+h1 {
+  margin: 0;
+}
+
 header {
+  align-items: center;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  margin: 30px 15px;
 }
 
 header a {
   font-size: 24px;
   text-decoration: none;
+}
+
+header div {
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
@@ -51,8 +61,14 @@ textarea {
   border: none;
   color: whitesmoke;
   height: 200px;
+  padding: 20px;
   white-space: pre-wrap;
   width: 100%;
+}
+
+.copyright {
+  margin: 0;
+  color:rgba(255, 0, 191, 0.507)
 }
 
 .hidden {
