--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,14 +32,6 @@ header div {
   flex-direction: column;
 }
 
-footer {
-  color: rgba(255, 0, 191, 0.3);
-  display: flex;
-  justify-content: space-between;
-  margin: 60px 0 0 0;
-  text-align: right;
-}
-
 button {
   background-color: #282f41;
   border-color: rgba(231, 159, 159, 0.3);
@@ -68,7 +60,7 @@ textarea {
 
 .copyright {
   margin: 0;
-  color:rgba(255, 0, 191, 0.507)
+  color:#fa92e081
 }
 
 .hidden {
