--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,6 +38,7 @@ button {
   border-color: rgba(231, 159, 159, 0.3);
   color: whitesmoke;
   font-size: 20px;
+  margin: 10px;
   padding: 10px;
 }
 
