--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,8 +38,13 @@ button {
   border-color: rgba(231, 159, 159, 0.3);
   color: whitesmoke;
   font-size: 20px;
-  margin: 10px;
+  margin: 10px auto;
   padding: 10px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
 }
 
 section {
@@ -78,3 +83,4 @@ textarea {
   animation-iteration-count: infinite; 
   opacity: 0.0;
 }
+
