--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,7 +19,7 @@ header {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin: 30px;
+  margin: 10px 0 50px 0;
 }
 
 header a {
