--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -85,3 +85,19 @@ textarea {
   opacity: 0.0;
 }
 
+.intro {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  height: 100%;
+  width: 100%;
+}
+
+.intro-text {
+  background-color: black;
+  padding: 20px;
+}
