--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   background-color: black;
-  color: white;
+  color: whitesmoke;
   margin: auto;
   max-width: 800px;
   text-align: center;
@@ -13,6 +13,7 @@ body {
 
 h1 {
   margin: 0;
+  cursor: pointer;
 }
 
 header {
@@ -86,7 +87,7 @@ textarea {
 }
 
 .intro {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: black;
   position: fixed;
   top: 0;
   right: 0;
@@ -97,7 +98,13 @@ textarea {
   width: 100%;
 }
 
+.intro p {
+  max-width: 600px;
+  padding: 10px;
+}
+
 .intro-text {
-  background-color: black;
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
